--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WaveTunnel</title>
-    <style> body {padding: 0; margin: 0;} </style>
+    <style> body {padding: 0; margin: 0;} canvas { display: block; }</style>
 
     <script src="p5/p5.js"></script>
     <script src="p5/p5.dom.js"></script>
