Refactor input files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
 
     <title>WaveTunnel</title>
-    <style> body {padding: 0; margin: 0;} canvas { display: block; }</style>
+    <style> body {padding: 0; margin: 0;} canvas { display: block; } * { cursor: none; }</style>
 
     <script src="p5/p5.js"></script>
     <script src="p5/p5.dom.js"></script>
@@ -19,7 +19,8 @@
 
     <script src="wavetunnel.js"></script>
     
-    <script src="inputs/keys.js"></script>
+    <script src="inputs/keyboard.js"></script>
+    <script src="inputs/mouse.js"></script>
     
     <script src="helpers/functions.js"></script>
     <script src="helpers/variables.js"></script>
