Import cursor particle system

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="helpers/functions.js"></script>
     <script src="helpers/variables.js"></script>
     
+    <script src="models/Cursor.js"></script>
     <script src="models/Line.js"></script>
     <script src="models/Rectangle.js"></script>
     <script src="models/RectangleWave.js"></script>
