Implement midi controls

--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
 
     canvas {
       display: block;
-    }
-
-    * {
       cursor: none;
     }
   </style>
+
+  <script src="https://cdn.jsdelivr.net/npm/webmidi"></script>
 
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.dom.js"></script>
@@ -44,6 +43,7 @@
 
   <script src="inputs/keyboard.js"></script>
   <script src="inputs/mouse.js"></script>
+  <script src="inputs/webmidi.js"></script>
   <script src="inputs/gui.js"></script>
 
   <script src="helpers/functions.js"></script>
