--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.dom.js"></script>
   <script src="libraries/p5.sound.js"></script>
-  <script src="libraries/p5.gui.js"></script>
   <script src="libraries/quicksettings.js"></script>
+
+  <script src="libraries/datgui/dat.gui.min.js" type="text/javascript"></script>
+  <script src="libraries/datgui/dat.color.min.js" type="text/javascript"></script>
+  <script src="libraries/datgui/guiGlue.js" type="text/javascript"></script>
 
   <script src="wavetunnel.js"></script>
 
