--- a/index.html
+++ b/index.html
@@ -52,10 +52,18 @@
   <script src="helpers/functions.js"></script>
   <script src="helpers/variables.js"></script>
 
-  <script src="models/Cursor.js"></script>
+
+  <script src="models/Wave.js"></script>
+  <script src="models/Form.js"></script>
+
   <script src="models/Line.js"></script>
   <script src="models/Rectangle.js"></script>
+  <script src="models/Polygon.js"></script>
+  <script src="models/Hourglass.js"></script>
+
   <script src="models/RectangleWave.js"></script>
+  <script src="models/HourglassWave.js"></script>
+  <script src="models/PolygonWave.js"></script>
 
 </head>
 
