--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script src="libraries/p5.dom.js"></script>
   <script src="libraries/p5.sound.js"></script>
   <script src="libraries/quicksettings.js"></script>
+  <script src="libraries/CCapture.all.min.js"></script>
 
   <script src="libraries/datgui/dat.gui.min.js" type="text/javascript"></script>
   <script src="libraries/datgui/dat.color.min.js" type="text/javascript"></script>
