--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <script src="libraries/p5.sound.js"></script>
   <script src="libraries/quicksettings.js"></script>
   <script src="libraries/CCapture.all.min.js"></script>
+  <!-- <script src="libraries/osc-browser.min.js"></script> -->
 
   <script src="libraries/datgui/dat.gui.min.js" type="text/javascript"></script>
   <script src="libraries/datgui/dat.color.min.js" type="text/javascript"></script>
@@ -49,6 +50,7 @@
   <script src="inputs/mouse.js"></script>
   <script src="inputs/webmidi.js"></script>
   <script src="inputs/gui.js"></script>
+  <script src="inputs/sound.js"></script>
 
   <script src="helpers/functions.js"></script>
   <script src="helpers/variables.js"></script>
@@ -58,12 +60,16 @@
   <script src="models/Form.js"></script>
 
   <script src="models/Rectangle.js"></script>
-  <script src="models/Polygon.js"></script>
   <script src="models/Hourglass.js"></script>
+  <script src="models/Polygon.js"></script>
+  <script src="models/TextForm.js"></script>
+  <script src="models/Line.js"></script>
 
   <script src="models/RectangleWave.js"></script>
   <script src="models/HourglassWave.js"></script>
   <script src="models/PolygonWave.js"></script>
+  <script src="models/TextWave.js"></script>
+  <script src="models/LineWave.js"></script>
 
 </head>
 
