--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <script src="libraries/p5.sound.js"></script>
   <script src="libraries/quicksettings.js"></script>
   <script src="libraries/CCapture.all.min.js"></script>
-  <!-- <script src="libraries/osc-browser.min.js"></script> -->
+  <script src="server/node_modules/osc/dist/osc-browser.js"></script>
 
   <script src="libraries/datgui/dat.gui.min.js" type="text/javascript"></script>
   <script src="libraries/datgui/dat.color.min.js" type="text/javascript"></script>
