Import osc.js into Wavetunnel

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="inputs/keyboard.js"></script>
   <script src="inputs/mouse.js"></script>
   <script src="inputs/webmidi.js"></script>
+  <script src="inputs/osc.js"></script>
   <script src="inputs/gui.js"></script>
   <script src="inputs/sound.js"></script>
 
