--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
 
   <script src="controllers/AnimationController.js"></script>
+  <script src="controllers/WaveController.js"></script>
   <script src="inputs/keyboard.js"></script>
   <script src="inputs/mouse.js"></script>
   <script src="inputs/WebmidiController.js"></script>
