--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- <script src="server/node_modules/osc/dist/osc-browser.js"></script> -->
   <script> var exports = {}; </script>
   <!-- <script src="libraries/webmidi.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/webmidi@latest/dist/iife/webmidi.iife.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/webmidi@latest/dist/iife/webmidi.iife.js"></script> -->
 
   <script src="libraries/datgui/dat.gui.min.js" type="text/javascript"></script>
   <script src="libraries/datgui/dat.color.min.js" type="text/javascript"></script>
@@ -51,7 +51,7 @@
   <script src="controllers/WaveController.js"></script>
   <script src="inputs/keyboard.js"></script>
   <script src="inputs/mouse.js"></script>
-  <script src="inputs/WebmidiController.js"></script>
+  <!-- <script src="inputs/WebmidiController.js"></script> -->
   <script src="inputs/osc.js"></script>
   <script src="inputs/gui.js"></script>
   <script src="inputs/sound.js"></script>
